
    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1392 WATO Folder filter: show only the paths a user is allowed to see
    * 1398 Allow to spread times of next check when rescheduling...
    * 1405 Checkbox for settings downtimes on the hosts of the selected services...
    * 1410 Output log text of scheduled downtime log entries...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
    * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...
    * 1401 FIX: Display options in views are now again persistent...
    * 1120 FIX: Multisite filters Host/Service Contactgroup: Fixed livestatus exception...

    WATO:
    * 1096 New WATO webservices: manage hosts via webinterface...
    * 1155 NagVis map edit/view permissions can now be set using roles/groups...
    * 1115 Renamed rule: Hosts using SNMP v2c -> Legacy SNMP devices using SNMP v2c...
    * 1404 Make title/help of custom user attributes localizable...
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...
    * 1153 FIX: Changed custom user attributes can now be used immediately...
    * 0201 FIX: Fixed error message in Rulelist of RBN...
    * 1100 FIX: WATO backup domains: fixed bug were excluded files still got deleted on snapshot restore...
    * 1101 FIX: WATO check parameter: renamed 'Nominal Voltages' to 'Voltage Levels..'
    * 1396 FIX: Fix default setting of Enable sounds in views...