@@ -1,0 +1,9 @@
+Title: New builting views for the history of scheduled downtimes
+Level: 2
+Component: multisite
+Compatible: compat
+Version: 1.2.5i6
+Date: 1412085926
+Class: feature
+
+
