@@ -390,6 +390,39 @@ multisite_builtin_views.update({
                'sorters': [('downtime_what', False),
                            ('downtime_start_time', False)],
                'title': _('Downtimes')},
+
+'downtime_history': {'browser_reload': 0,
+            'column_headers': 'pergroup',
+            'datasource': 'log_events',
+            'description': _('All historic scheduled downtimes of hosts and services'),
+            'group_painters': [],
+            'hard_filters': [ 'log_type' ],
+            'hard_filtervars': [('logtime_from_range', '86400'),
+                                ('logtime_from', '60'),
+                                ('log_type', 'SERVICE DOWNTIME ALERT'),
+                               ],
+            'hidden': False,
+            'hide_filters': [],
+            'icon' : 'downtime',
+            'layout': 'table',
+            'linktitle': _('Host Dt-History'),
+            'mustsearch': False,
+            'num_columns': 1,
+            'painters': [('log_icon', None),
+                         ('log_time', None),
+                         ('host', 'host_dt_hist'),
+                         ('service_description', 'svc_dt_hist'),
+                         ('log_state_type', None),
+                         ('log_plugin_output', None),
+                             ],
+            'play_sounds': False,
+            'public': True,
+            'show_filters': ['logtime', ],
+            'sorters': [('log_time', True), ('log_lineno', True)],
+            'title': _('History of scheduled downtimes'),
+            'topic': _('Other'),
+},
+
  'api_downtimes': {'column_headers': 'pergroup',
                'datasource': 'downtimes',
                'description': _('All host- and service-downtimes (including ids)'),
@@ -1856,6 +1889,35 @@ multisite_builtin_views.update({
             'show_filters': ['logtime', 'log_state'],
             'sorters': [('log_time', True), ('log_lineno', True)],
             'title': _('Events of host')},
+
+'host_dt_hist': {'browser_reload': 0,
+            'column_headers': 'pergroup',
+            'datasource': 'log_events',
+            'description': _('All historic scheduled downtimes of a certain host'),
+            'group_painters': [],
+            'hard_filters': [ 'log_type' ],
+            'hard_filtervars': [('logtime_from_range', '86400'),
+                                ('logtime_from', '60'),
+                                ('log_type', 'HOST DOWNTIME ALERT'),
+                               ],
+            'hidden': True,
+            'hide_filters': ['site', 'host' ],
+            'icon' : 'downtime',
+            'layout': 'table',
+            'linktitle': _('Host Dt-History'),
+            'mustsearch': False,
+            'num_columns': 1,
+            'painters': [('log_icon', None),
+                         ('log_time', None),
+                         ('log_state_type', None),
+                         ('log_plugin_output', None),
+                             ],
+            'play_sounds': False,
+            'public': True,
+            'show_filters': ['logtime', ],
+            'sorters': [('log_time', True), ('log_lineno', True)],
+            'title': _('Historic downtimes of host')},
+
 'svcevents': {'browser_reload': 0,
             'column_headers': 'pergroup',
             'datasource': 'log_events',
@@ -1885,6 +1947,35 @@ multisite_builtin_views.update({
             'show_filters': ['logtime', 'log_state'],
             'sorters': [('log_time', True), ('log_lineno', True)],
             'title': _('Events of service')},
+
+'svc_dt_hist': {'browser_reload': 0,
+            'column_headers': 'pergroup',
+            'datasource': 'log_events',
+            'description': _('All historic scheduled downtimes of a certain service'),
+            'group_painters': [],
+            'hard_filters': [ 'log_type' ],
+            'hard_filtervars': [('logtime_from_range', '86400'),
+                                ('logtime_from', '60'),
+                                ('log_type', '(HOST|SERVICE) DOWNTIME ALERT'),
+                               ],
+            'hidden': True,
+            'hide_filters': ['site', 'host', 'service'],
+            'icon' : 'downtime',
+            'layout': 'table',
+            'linktitle': _('Downtime-History'),
+            'mustsearch': False,
+            'num_columns': 1,
+            'painters': [('log_icon', None),
+                         ('log_time', None),
+                         ('log_state_type', None),
+                         ('log_plugin_output', None),
+                             ],
+            'play_sounds': False,
+            'public': True,
+            'show_filters': ['logtime', ],
+            'sorters': [('log_time', True), ('log_lineno', True)],
+            'title': _('Historic downtimes of service')},
+
 'hostsvcevents': {'browser_reload': 0,
             'column_headers': 'pergroup',
             'datasource': 'log_events',
