@@ -108,6 +108,7 @@
     * 1398 Allow to spread times of next check when rescheduling...
     * 1405 Checkbox for settings downtimes on the hosts of the selected services...
     * 1410 Output log text of scheduled downtime log entries...
+    * 1411 New builting views for the history of scheduled downtimes
     * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
     * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception
     * 1154 FIX: Availability: Fixed unwanted redirect to edit annotation page after editing availability options...
